<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LayoutActividad</string>
    <string name="hello_world">Hello world!</string>
    <string name="nombre">Nombre:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="correo">Correo:</string>
    <string name="contrasenya">Contraseña:</string>
    <string name="contrasenyarep">Repetir contraseña:</string>
    <string name="detalles">Detalles:</string>
    <string name="validar">Validar</string>
    <string name="title_activity_main">Interacción</string>
    <string name="borrar">Borrar</string>
    <string name="msj_correo_no_valido">Correo no válido</string>

</resources>
